# k64_firmware

./: .gitmodules  meson.build  meson_options.txt
include/: environment.h  multitasking.h
include/algo/: ahrs.h  mahony.h  pid.h
include/drivers/: esc_ctrl.h  i2c.h  servo_ctrl.h  uart.h
include/drivers/devices/: altimu.h  motors.h  servos.h  status_leds.h
include/drivers/kinetis/: ftm.h  i2c.h  uart.h
include/kernel/: file.h  mutex.h  process.h  schedule.h  stream_io.h
include/kernel/private/: static_memory.h
include/nongnu/: unistd.h
include/programs/: MahonyAHRS.h  flight_ctrl.h  sensor_fusion.h  sensor_read.h  xpc_relay_event_loop.h  xpc_spammer.h
include/util/: debug.h
kalman/: BoardDisplay_simple.py  K64_data.py  Quaternion_simple.py  Wireframe_simple.py  kalman_dev.py  pytp.py  rawdata.py
scripts/: create_bin.sh  flash.sh  openocd_server.sh
src/algo/: madgwick.c  mahony.c  meson.build  pid.c
src/drivers/: esc_ctrl.c  i2c.c  meson.build  servo_ctrl.c  uart.c
src/drivers/arm/cm4/: systick.c
src/drivers/devices/: altimu.c  motors.c  servos.c  status_leds.c
src/drivers/kinetis/: ftm.c  i2c.c  uart.c
src/kernel/: boot.c  environment.c  file_table.c  hardfault.c  kernel_main.c  meson.build  mutex.c  mutex_lock.c  schedule.c  service_dispatch.c  stream_io.c
src/kernel/arm/cm4/: multitasking.c  process.c  schedule_entry.S  syscall_entry.S
src/kernel/private/: static_memory.c
src/libc/: errno.c  meson.build  string.c
src/nongnu/: unistd.c
src/programs/: MahonyAHRS.c  array_test.c  blink_demo.c  blink_demo.h  dma.c  enter_proc.s  flight_ctrl.c  init.c  main.c  meson.build  pcb_scratch.c  print_demo.c  print_demo.h  process_switcher_test.c  sdhc.c  sensor_fusion.c  sensor_read.c  txpc_test.c  uart_test.c  xpc_main.c  xpc_relay_event_loop.c  xpc_spammer.c
src/util/: debug.c  fmtstr.c
subprojects/: cwpack.wrap
subprojects/packagefiles/cwpack-meson/: meson.build
template_files/k64_files/: k64_cross_properties.cfg
