option(
    'cpu_arch',
    type: 'string',
    value: 'arm-cortexm4',
    description: 'Controls the target architecture.'
)

option(
    'target_system',
    type: 'string',
    value: 'MK64F12',
    description: 'Controls the target system.'
)

option(
    'applications',
    type: 'array',
    description: 'Controls the profile of programs to enable in the build.'
)
